{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 26,
  "lineage": "05683dff-f5c2-9cba-0644-8dd78c32851b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "fp-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128810856714:loadbalancer/app/fp-alb/814fed753e6b00df",
            "arn_suffix": "app/fp-alb/814fed753e6b00df",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fp-alb-1608459146.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:128810856714:loadbalancer/app/fp-alb/814fed753e6b00df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a46ba5248f81c74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06828e39ae4701c5d"
              },
              {
                "subnet_id": "subnet-0d902bdf24581be14"
              }
            ],
            "subnets": [
              "subnet-06828e39ae4701c5d",
              "subnet-0d902bdf24581be14"
            ],
            "vpc_id": "vpc-0b013cdcb6a08f1d8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.fp-alb-sg",
            "aws_subnet.fp-public-subnets",
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "fp-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128810856714:listener/app/fp-alb/814fed753e6b00df/872827081d2b7740",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:128810856714:targetgroup/fp-ecs-target-group/80aeda82acfd9f28",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:128810856714:listener/app/fp-alb/814fed753e6b00df/872827081d2b7740",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:128810856714:loadbalancer/app/fp-alb/814fed753e6b00df",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.fp-alb",
            "aws_alb_target_group.fp-target-group",
            "aws_security_group.fp-alb-sg",
            "aws_subnet.fp-public-subnets",
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "fp-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128810856714:targetgroup/fp-ecs-target-group/80aeda82acfd9f28",
            "arn_suffix": "targetgroup/fp-ecs-target-group/80aeda82acfd9f28",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:128810856714:targetgroup/fp-ecs-target-group/80aeda82acfd9f28",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fp-ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "dependencies": [
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "flask-postgres-private-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:route-table/rtb-0c5e1abf2195ed14b",
            "default_route_table_id": "rtb-0c5e1abf2195ed14b",
            "id": "rtb-0c5e1abf2195ed14b",
            "owner_id": "128810856714",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "flask-postgres-rt-private-default"
            },
            "tags_all": {
              "Name": "flask-postgres-rt-private-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:internet-gateway/igw-09544baeeb1e95ab5",
            "id": "igw-09544baeeb1e95ab5",
            "owner_id": "128810856714",
            "tags": {
              "Name": "flask-postgres-igw"
            },
            "tags_all": {
              "Name": "flask-postgres-igw"
            },
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "dependencies": [
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fp-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:route-table/rtb-06452f73923a011d8",
            "id": "rtb-06452f73923a011d8",
            "owner_id": "128810856714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09544baeeb1e95ab5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask-postgres-rt-public"
            },
            "tags_all": {
              "Name": "flask-postgres-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fp-igw",
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fp-private-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d3ca62b41241081",
            "route_table_id": "rtb-06452f73923a011d8",
            "subnet_id": "subnet-0a2136eb1c5a20495"
          },
          "dependencies": [
            "aws_internet_gateway.fp-igw",
            "aws_route_table.fp-rt-public",
            "aws_subnet.fp-private-subnets",
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a591ae0235de095",
            "route_table_id": "rtb-06452f73923a011d8",
            "subnet_id": "subnet-0b5533cae813e24f8"
          },
          "dependencies": [
            "aws_internet_gateway.fp-igw",
            "aws_route_table.fp-rt-public",
            "aws_subnet.fp-private-subnets",
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fp-public-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0207807fc82bce3b4",
            "route_table_id": "rtb-06452f73923a011d8",
            "subnet_id": "subnet-0d902bdf24581be14"
          },
          "dependencies": [
            "aws_internet_gateway.fp-igw",
            "aws_route_table.fp-rt-public",
            "aws_subnet.fp-public-subnets",
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a66bc7bde2f392f",
            "route_table_id": "rtb-06452f73923a011d8",
            "subnet_id": "subnet-06828e39ae4701c5d"
          },
          "dependencies": [
            "aws_internet_gateway.fp-igw",
            "aws_route_table.fp-rt-public",
            "aws_subnet.fp-public-subnets",
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fp-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:security-group/sg-02a46ba5248f81c74",
            "description": "control access to the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a46ba5248f81c74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fp-app-alb",
            "name_prefix": "",
            "owner_id": "128810856714",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fp-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:security-group/sg-0afa04e1537257f82",
            "description": "control access to the ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afa04e1537257f82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a46ba5248f81c74"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "fp-app-ecs-from-alb",
            "name_prefix": "",
            "owner_id": "128810856714",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fp-alb-sg",
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fp-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:security-group/sg-01dda4f23f52decd0",
            "description": "access to public instances",
            "egress": [],
            "id": "sg-01dda4f23f52decd0",
            "ingress": [],
            "name": "fp-public-group",
            "name_prefix": "",
            "owner_id": "128810856714",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:security-group/sg-08d34e9275a96a6b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d34e9275a96a6b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-security-group",
            "name_prefix": "",
            "owner_id": "128810856714",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fp-private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:subnet/subnet-0a2136eb1c5a20495",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2136eb1c5a20495",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128810856714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-postgres-tf-private-1"
            },
            "tags_all": {
              "Name": "flask-postgres-tf-private-1"
            },
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "dependencies": [
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:subnet/subnet-0b5533cae813e24f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5533cae813e24f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128810856714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-postgres-tf-private-2"
            },
            "tags_all": {
              "Name": "flask-postgres-tf-private-2"
            },
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "dependencies": [
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fp-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:subnet/subnet-0d902bdf24581be14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d902bdf24581be14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128810856714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-postgres-tf-public-1"
            },
            "tags_all": {
              "Name": "flask-postgres-tf-public-1"
            },
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "dependencies": [
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:subnet/subnet-06828e39ae4701c5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06828e39ae4701c5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128810856714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-postgres-tf-public-2"
            },
            "tags_all": {
              "Name": "flask-postgres-tf-public-2"
            },
            "vpc_id": "vpc-0b013cdcb6a08f1d8"
          },
          "dependencies": [
            "aws_vpc.fp-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128810856714:vpc/vpc-0b013cdcb6a08f1d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b05b4dd89338adbd",
            "default_route_table_id": "rtb-0c5e1abf2195ed14b",
            "default_security_group_id": "sg-0b15234ba85265b8a",
            "dhcp_options_id": "dopt-0900c07ea2f9abf32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b013cdcb6a08f1d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5e1abf2195ed14b",
            "owner_id": "128810856714",
            "tags": {
              "Name": "flask-postgres-vpc"
            },
            "tags_all": {
              "Name": "flask-postgres-vpc"
            }
          }
        }
      ]
    }
  ]
}